--- a/Zippy/src/main/resources/templates/orders.html
+++ b/Zippy/src/main/resources/templates/orders.html
@@ -12,7 +12,8 @@
   <!-- SweetAlert -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- Admin Header -->
-  <link rel="stylesheet" type="text/css" th:href="@{/assets/css/adminHeader.css}" />
+  <link rel="stylesheet" type="text/css" th:href="@{/assets/css/style.css}" />
+  <script th:src="@{/assets/js/cart.js}"></script>
 
   <style>
     html, body {
@@ -95,7 +96,7 @@
 <body>
 
 <!-- Admin Header -->
-<div th:replace="adminHeader :: adminHeader"></div>
+<div th:replace="header :: header"></div>
 
 <div class="container my-5 px-2 px-md-3">
   <h2 class="text-center fw-bold mb-4">Customer Orders</h2>
